--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^2.0.1",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "lodash": "^4.17.20",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
